--- a/first.ipynb
+++ b/first.ipynb
@@ -148,6 +148,115 @@
     "    print(f'While loop count: {count}')\n",
     "    count += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6af73fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet(name):\n",
+    "    print(f\"Hello, {name}!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4365c946",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alice!\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet(\"Alice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "04b24444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_even(num):\n",
+    "    return num % 2 == 0\n",
+    "\n",
+    "print(is_even(4))  # True\n",
+    "print(is_even(5))  # False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f4324730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''For writing to a file'''\n",
+    "\n",
+    "file = open(\"example.txt\", \"w\")\n",
+    "file.write(\"Hello, file!\\n\")\n",
+    "file.write(\"This is Python file handling.\\n\")\n",
+    "file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9523aaf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, file!\n",
+      "This is Python file handling.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''For reading from a file'''\n",
+    "\n",
+    "file = open('example.txt', 'r')\n",
+    "content = file.read()\n",
+    "print(content)\n",
+    "file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09b54169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str_content = \"this is a string that will be written to a file example.txt\"\n",
+    "\n",
+    "with open('example.txt', 'w') as file:\n",
+    "    file.write(str_content)\n",
+    "file = open('example.txt', 'r')\n",
+    "content = file.read()\n",
+    "print(content)\n",
+    "file.close()\n"
+   ]
   }
  ],
  "metadata": {
@@ -166,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
