--- a/first.ipynb
+++ b/first.ipynb
@@ -243,10 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "09b54169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a string that will be written to a file example.txt\n"
+     ]
+    }
+   ],
    "source": [
     "str_content = \"this is a string that will be written to a file example.txt\"\n",
     "\n",
