--- a/first.ipynb
+++ b/first.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "09b54169",
    "metadata": {},
    "outputs": [
@@ -251,12 +251,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is a string that will be written to a file example.txt\n"
+      "this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python\n"
      ]
     }
    ],
    "source": [
-    "str_content = \"this is a string that will be written to a file example.txt\"\n",
+    "str_content = \"this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python\"\n",
     "\n",
     "with open('example.txt', 'w') as file:\n",
     "    file.write(str_content)\n",
@@ -264,6 +264,102 @@
     "content = file.read()\n",
     "print(content)\n",
     "file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "75b5a9d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "2\n",
+      "15\n",
+      "1.6666666666666667\n",
+      "2\n",
+      "125\n",
+      "1\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "3\n",
+      "5\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' Lets work on python operators '''\n",
+    "\n",
+    "print(5 + 3)   # Addition\n",
+    "print(5 - 3)   # Subtraction    \n",
+    "print(5 * 3)   # Multiplication\n",
+    "print(5 / 3)   # Division   \n",
+    "print(5 % 3)   # Modulus\n",
+    "print(5 ** 3)  # Exponentiation \n",
+    "print(5 // 3)  # Floor Division\n",
+    "print(5 == 3)   # Equal to\n",
+    "print(5 != 3)   # Not equal to\n",
+    "print(5 > 3)    # Greater than\n",
+    "print(5 < 3)    # Less than\n",
+    "print(5 >= 3)   # Greater than or equal to  \n",
+    "print(5 <= 3)   # Less than or equal to\n",
+    "print(5 and 3)  # Logical AND\n",
+    "print(5 or 3)   # Logical OR\n",
+    "print(not 5)    # Logical NOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "78fd2b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculator(a, b, operation):\n",
+    "    if operation == '+':\n",
+    "        return a + b\n",
+    "    elif operation == '-':\n",
+    "        return a - b\n",
+    "    elif operation == '*':\n",
+    "        return a * b\n",
+    "    elif operation == '/':\n",
+    "        return a / b\n",
+    "    elif operation == '%':\n",
+    "        return a % b    \n",
+    "    elif operation == '**':\n",
+    "        return a ** b\n",
+    "    elif operation == '//':\n",
+    "        return a // b\n",
+    "    else:\n",
+    "        return \"Invalid operation\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "16a6765e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calculator(2, 3, '+'))  # Example usage\n",
+    "print(calculator(10, 5, '-'))  # Example usage "
    ]
   }
  ],
@@ -283,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
