worked on package and modules

--- a/first.ipynb
+++ b/first.ipynb
@@ -2,19 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "fd5d347e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Mr.ravi\n",
-      "The area of the rectangle is 25.0 square units.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T04:04:03.410994Z",
+     "start_time": "2025-08-13T04:03:55.658487Z"
     }
-   ],
+   },
    "source": [
     "name = input(\"What is your name? \")\n",
     "\n",
@@ -26,7 +20,18 @@
     "area = width * height\n",
     "\n",
     "print(f'The area of the rectangle is {area} square units.')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Mr.ravi\n",
+      "The area of the rectangle is 25.0 square units.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -243,28 +248,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "09b54169",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T04:08:23.281499Z",
+     "start_time": "2025-08-13T04:08:23.278522Z"
+    }
+   },
+   "source": [
+    "str_content = \"this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python. Some more text for the testing purpose in the jupyter notebook\"\n",
+    "\n",
+    "with open('example.txt', 'w') as file:\n",
+    "    file.write(str_content)\n",
+    "file.close()\n",
+    "\n",
+    "with open('example.txt', 'r') as file:\n",
+    "    content = file.read()\n",
+    "print(content)\n",
+    "file.close()\n"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python\n"
+      "this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python. Some more text for the testing purpose in the jupyter notebook\n"
      ]
     }
    ],
-   "source": [
-    "str_content = \"this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python\"\n",
-    "\n",
-    "with open('example.txt', 'w') as file:\n",
-    "    file.write(str_content)\n",
-    "file = open('example.txt', 'r')\n",
-    "content = file.read()\n",
-    "print(content)\n",
-    "file.close()\n"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -318,10 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "78fd2b8f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T04:06:05.355288Z",
+     "start_time": "2025-08-13T04:06:05.352725Z"
+    }
+   },
    "source": [
     "def calculator(a, b, operation):\n",
     "    if operation == '+':\n",
@@ -340,13 +355,23 @@
     "        return a // b\n",
     "    else:\n",
     "        return \"Invalid operation\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "16a6765e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T04:04:29.764110Z",
+     "start_time": "2025-08-13T04:04:29.761929Z"
+    }
+   },
+   "source": [
+    "print(calculator(2, 3, '+'))  # Example usage\n",
+    "print(calculator(10, 5, '-'))  # Example usage "
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -357,10 +382,7 @@
      ]
     }
    ],
-   "source": [
-    "print(calculator(2, 3, '+'))  # Example usage\n",
-    "print(calculator(10, 5, '-'))  # Example usage "
-   ]
+   "execution_count": 5
   }
  ],
  "metadata": {
