moddules and packages completed

--- a/first.ipynb
+++ b/first.ipynb
@@ -361,6 +361,475 @@
     "print(calculator(2, 3, '+'))  # Example usage\n",
     "print(calculator(10, 5, '-'))  # Example usage "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64f31d8c",
+   "metadata": {},
+   "source": [
+    "# String operations \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e444a3a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "HelloHelloHello\n",
+      "H\n",
+      "o\n",
+      "ell\n"
+     ]
+    }
+   ],
+   "source": [
+    "text1 = \"Hello\"\n",
+    "text2 = \"World\"\n",
+    "\n",
+    "print(text1 + \" \" + text2)  # Concatenation\n",
+    "print(text1 * 3)            # Repeat string\n",
+    "print(text1[0])             # First character\n",
+    "print(text1[-1])            # Last character\n",
+    "print(text1[1:4])           # Slice from index 1 to 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a7e2dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "n\n",
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n",
+      "nohtyp\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'python'\n",
+    "print(word[0])\n",
+    "print(word[-1])\n",
+    "for i in range(len(word)):\n",
+    "    print(word[i])  # Print each character in the word\n",
+    "    \n",
+    "reversed_word = word[::-1]\n",
+    "print(reversed_word)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d79394b1",
+   "metadata": {},
+   "source": [
+    "# Mini Project #2 — Number Guessing Game 🎯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1cb34b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "🎉 Correct! You guessed it in 11 attempts.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "secret_number = random.randint(1, 100)\n",
+    "guess = None\n",
+    "attempts = 0\n",
+    "\n",
+    "while guess != secret_number:\n",
+    "    guess = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "    attempts += 1\n",
+    "    \n",
+    "    if guess == secret_number:\n",
+    "        print(f\"🎉 Correct! You guessed it in {attempts} attempts.\")\n",
+    "    elif guess < secret_number:\n",
+    "        print(\"Too low! Try again.\")\n",
+    "    else:\n",
+    "        print(\"Too high! Try again.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd222041",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too high! Try again.\n",
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too high! Try again.\n",
+      "🎉 Correct! You guessed it in 8 attempts.\n",
+      "✅ Game result saved to game_results.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Ask for player's name\n",
+    "player_name = input(\"Enter your name: \")\n",
+    "\n",
+    "secret_number = random.randint(1, 100)\n",
+    "guess = None\n",
+    "attempts = 0\n",
+    "\n",
+    "while guess != secret_number:\n",
+    "    guess = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "    attempts += 1\n",
+    "    \n",
+    "    if guess == secret_number:\n",
+    "        print(f\"🎉 Correct! You guessed it in {attempts} attempts.\")\n",
+    "    elif guess < secret_number:\n",
+    "        print(\"Too low! Try again.\")\n",
+    "    else:\n",
+    "        print(\"Too high! Try again.\")\n",
+    "\n",
+    "# Save the result to a file\n",
+    "with open(\"game_results.txt\", \"a\") as file:  # \"a\" means append mode\n",
+    "    file.write(f\"{player_name} guessed {secret_number} in {attempts} attempts\\n\")\n",
+    "\n",
+    "print(\"✅ Game result saved to game_results.txt\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee965300",
+   "metadata": {},
+   "source": [
+    "# Ladder board feature "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "768cfb5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "🎉 Correct! You guessed it in 3 attempts.\n",
+      "\n",
+      "✅ Game result saved!\n",
+      "\n",
+      "🏆 Leaderboard:\n",
+      "--------------------\n",
+      "99 guessed 27 in 8 attempts\n",
+      "12 guessed 10 in 3 attempts\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Ask for player's name\n",
+    "player_name = input(\"Enter your name: \")\n",
+    "\n",
+    "secret_number = random.randint(1, 100)\n",
+    "guess = None\n",
+    "attempts = 0\n",
+    "\n",
+    "while guess != secret_number:\n",
+    "    guess = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "    attempts += 1\n",
+    "    \n",
+    "    if guess == secret_number:\n",
+    "        print(f\"🎉 Correct! You guessed it in {attempts} attempts.\")\n",
+    "    elif guess < secret_number:\n",
+    "        print(\"Too low! Try again.\")\n",
+    "    else:\n",
+    "        print(\"Too high! Try again.\")\n",
+    "\n",
+    "# Save the result\n",
+    "with open(\"game_results.txt\", \"a\") as file:\n",
+    "    file.write(f\"{player_name} guessed {secret_number} in {attempts} attempts\\n\")\n",
+    "\n",
+    "print(\"\\n✅ Game result saved!\")\n",
+    "\n",
+    "# Show leaderboard\n",
+    "print(\"\\n🏆 Leaderboard:\")\n",
+    "print(\"--------------------\")\n",
+    "try:\n",
+    "    with open(\"game_results.txt\", \"r\") as file:\n",
+    "        for line in file:\n",
+    "            print(line.strip())\n",
+    "except FileNotFoundError:\n",
+    "    print(\"No games played yet!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae3563e",
+   "metadata": {},
+   "source": [
+    "# Data Structure in python "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8cce7d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "['cherry', 'banana', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(fruits[0])        # First element\n",
+    "print(fruits[::-1])       # Last element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dc590f57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maerc eci eip elbbe\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_content = \"pebble pie ice cream\"\n",
+    "reversed = ''\n",
+    "for c in range(len(str_content)-1,0,-1):\n",
+    "    reversed += str_content[c]  # Reverse the string\n",
+    "print(reversed)  # Output: maerc eip elbbep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5ec615b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "🎉 Correct! You guessed it in 6 attempts.\n",
+      "\n",
+      "✅ Game result saved!\n",
+      "\n",
+      "🏆 Leaderboard (Fewest Attempts First):\n",
+      "------------------------------------\n",
+      "1. 12 — 6 attempts\n",
+      "2. 22 — 7 attempts\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import os\n",
+    "\n",
+    "# Ask for player's name\n",
+    "player_name = input(\"Enter your name: \")\n",
+    "\n",
+    "secret_number = random.randint(1, 100)\n",
+    "guess = None\n",
+    "attempts = 0\n",
+    "\n",
+    "while guess != secret_number:\n",
+    "    guess = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "    attempts += 1\n",
+    "    \n",
+    "    if guess == secret_number:\n",
+    "        print(f\"🎉 Correct! You guessed it in {attempts} attempts.\")\n",
+    "    elif guess < secret_number:\n",
+    "        print(\"Too low! Try again.\")\n",
+    "    else:\n",
+    "        print(\"Too high! Try again.\")\n",
+    "\n",
+    "# Save result in a text file\n",
+    "with open(\"game_results.txt\", \"a\") as file:\n",
+    "    file.write(f\"{player_name},{attempts}\\n\")\n",
+    "\n",
+    "print(\"\\n✅ Game result saved!\")\n",
+    "\n",
+    "# Read results into a list of dictionaries\n",
+    "# Read results into a list of dictionaries\n",
+    "leaderboard = []\n",
+    "if os.path.exists(\"game_results.txt\"):\n",
+    "    with open(\"game_results.txt\", \"r\") as file:\n",
+    "        for line in file:\n",
+    "            parts = line.strip().split(\",\")\n",
+    "            if len(parts) == 2:  # Only process correct format\n",
+    "                name, tries = parts\n",
+    "                leaderboard.append({\"name\": name, \"attempts\": int(tries)})\n",
+    "\n",
+    "\n",
+    "# Sort leaderboard by attempts (lowest first)\n",
+    "leaderboard = sorted(leaderboard, key=lambda x: x[\"attempts\"])\n",
+    "\n",
+    "# Display leaderboard\n",
+    "print(\"\\n🏆 Leaderboard (Fewest Attempts First):\")\n",
+    "print(\"------------------------------------\")\n",
+    "for rank, entry in enumerate(leaderboard, start=1):\n",
+    "    print(f\"{rank}. {entry['name']} — {entry['attempts']} attempts\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10c4535c",
+   "metadata": {},
+   "source": [
+    "# Refactored Number guessing game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5821f65e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too high! Try again.\n",
+      "Too high! Try again.\n",
+      "🎉 Correct! You guessed it in 6 attempts.\n",
+      "\n",
+      "✅ Game result saved!\n",
+      "\n",
+      "🏆 Leaderboard (Fewest Attempts First):\n",
+      "------------------------------------\n",
+      "1. 12 — 6 attempts\n",
+      "2. 90 — 6 attempts\n",
+      "3. 22 — 7 attempts\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import os\n",
+    "\n",
+    "# Function to play the game\n",
+    "def play_game():\n",
+    "    player_name = input(\"Enter your name: \")\n",
+    "    secret_number = random.randint(1, 100)\n",
+    "    guess = None\n",
+    "    attempts = 0\n",
+    "\n",
+    "    while guess != secret_number:\n",
+    "        guess = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "        attempts += 1\n",
+    "\n",
+    "        if guess == secret_number:\n",
+    "            print(f\"🎉 Correct! You guessed it in {attempts} attempts.\")\n",
+    "        elif guess < secret_number:\n",
+    "            print(\"Too low! Try again.\")\n",
+    "        else:\n",
+    "            print(\"Too high! Try again.\")\n",
+    "\n",
+    "    save_result(player_name, attempts)\n",
+    "    show_leaderboard()\n",
+    "\n",
+    "\n",
+    "# Function to save game results\n",
+    "def save_result(name, attempts):\n",
+    "    with open(\"game_results.txt\", \"a\") as file:\n",
+    "        file.write(f\"{name},{attempts}\\n\")\n",
+    "    print(\"\\n✅ Game result saved!\")\n",
+    "\n",
+    "\n",
+    "# Function to display sorted leaderboard\n",
+    "def show_leaderboard():\n",
+    "    leaderboard = []\n",
+    "    if os.path.exists(\"game_results.txt\"):\n",
+    "        with open(\"game_results.txt\", \"r\") as file:\n",
+    "            for line in file:\n",
+    "                parts = line.strip().split(\",\")\n",
+    "                if len(parts) == 2:  # Skip invalid lines\n",
+    "                    name, tries = parts\n",
+    "                    leaderboard.append({\"name\": name, \"attempts\": int(tries)})\n",
+    "\n",
+    "    # Sort by attempts\n",
+    "    leaderboard.sort(key=lambda x: x[\"attempts\"])\n",
+    "\n",
+    "    # Display leaderboard\n",
+    "    print(\"\\n🏆 Leaderboard (Fewest Attempts First):\")\n",
+    "    print(\"------------------------------------\")\n",
+    "    for rank, entry in enumerate(leaderboard, start=1):\n",
+    "        print(f\"{rank}. {entry['name']} — {entry['attempts']} attempts\")\n",
+    "\n",
+    "\n",
+    "# Run the game\n",
+    "play_game()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c86497e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
