--- a/first.ipynb
+++ b/first.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "fd5d347e",
    "metadata": {
     "ExecuteTime": {
@@ -9,6 +10,16 @@
      "start_time": "2025-08-13T04:03:55.658487Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Mr.ravi\n",
+      "The area of the rectangle is 25.0 square units.\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"What is your name? \")\n",
     "\n",
@@ -20,18 +31,7 @@
     "area = width * height\n",
     "\n",
     "print(f'The area of the rectangle is {area} square units.')"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Mr.ravi\n",
-      "The area of the rectangle is 25.0 square units.\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,6 +248,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
    "id": "09b54169",
    "metadata": {
     "ExecuteTime": {
@@ -255,6 +256,15 @@
      "start_time": "2025-08-13T04:08:23.278522Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python. Some more text for the testing purpose in the jupyter notebook\n"
+     ]
+    }
+   ],
    "source": [
     "str_content = \"this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python. Some more text for the testing purpose in the jupyter notebook\"\n",
     "\n",
@@ -266,17 +276,7 @@
     "    content = file.read()\n",
     "print(content)\n",
     "file.close()\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is a string that will be written to a file example.txt lets write some more code to test the file writing and reading functionality in python. Some more text for the testing purpose in the jupyter notebook\n"
-     ]
-    }
-   ],
-   "execution_count": 11
+   ]
   },
   {
    "cell_type": "code",
@@ -330,6 +330,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "78fd2b8f",
    "metadata": {
     "ExecuteTime": {
@@ -337,6 +338,7 @@
      "start_time": "2025-08-13T04:06:05.352725Z"
     }
    },
+   "outputs": [],
    "source": [
     "def calculator(a, b, operation):\n",
     "    if operation == '+':\n",
@@ -355,12 +357,11 @@
     "        return a // b\n",
     "    else:\n",
     "        return \"Invalid operation\""
-   ],
-   "outputs": [],
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "16a6765e",
    "metadata": {
     "ExecuteTime": {
@@ -368,10 +369,6 @@
      "start_time": "2025-08-13T04:04:29.761929Z"
     }
    },
-   "source": [
-    "print(calculator(2, 3, '+'))  # Example usage\n",
-    "print(calculator(10, 5, '-'))  # Example usage "
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -850,10 +847,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7c86497e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'current_user_url': 'https://api.github.com/user', 'current_user_authorizations_html_url': 'https://github.com/settings/connections/applications{/client_id}', 'authorizations_url': 'https://api.github.com/authorizations', 'code_search_url': 'https://api.github.com/search/code?q={query}{&page,per_page,sort,order}', 'commit_search_url': 'https://api.github.com/search/commits?q={query}{&page,per_page,sort,order}', 'emails_url': 'https://api.github.com/user/emails', 'emojis_url': 'https://api.github.com/emojis', 'events_url': 'https://api.github.com/events', 'feeds_url': 'https://api.github.com/feeds', 'followers_url': 'https://api.github.com/user/followers', 'following_url': 'https://api.github.com/user/following{/target}', 'gists_url': 'https://api.github.com/gists{/gist_id}', 'hub_url': 'https://api.github.com/hub', 'issue_search_url': 'https://api.github.com/search/issues?q={query}{&page,per_page,sort,order}', 'issues_url': 'https://api.github.com/issues', 'keys_url': 'https://api.github.com/user/keys', 'label_search_url': 'https://api.github.com/search/labels?q={query}&repository_id={repository_id}{&page,per_page}', 'notifications_url': 'https://api.github.com/notifications', 'organization_url': 'https://api.github.com/orgs/{org}', 'organization_repositories_url': 'https://api.github.com/orgs/{org}/repos{?type,page,per_page,sort}', 'organization_teams_url': 'https://api.github.com/orgs/{org}/teams', 'public_gists_url': 'https://api.github.com/gists/public', 'rate_limit_url': 'https://api.github.com/rate_limit', 'repository_url': 'https://api.github.com/repos/{owner}/{repo}', 'repository_search_url': 'https://api.github.com/search/repositories?q={query}{&page,per_page,sort,order}', 'current_user_repositories_url': 'https://api.github.com/user/repos{?type,page,per_page,sort}', 'starred_url': 'https://api.github.com/user/starred{/owner}{/repo}', 'starred_gists_url': 'https://api.github.com/gists/starred', 'topic_search_url': 'https://api.github.com/search/topics?q={query}{&page,per_page}', 'user_url': 'https://api.github.com/users/{user}', 'user_organizations_url': 'https://api.github.com/user/orgs', 'user_repositories_url': 'https://api.github.com/users/{user}/repos{?type,page,per_page,sort}', 'user_search_url': 'https://api.github.com/search/users?q={query}{&page,per_page,sort,order}'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.get(\"https://api.github.com\")\n",
+    "print(response.status_code)   # 200 means OK\n",
+    "print(response.json())        # Prints JSON data from API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03bb6f90",
+   "metadata": {},
+   "source": [
+    "5️⃣ Freezing Requirements\n",
+    "\n",
+    "When you install packages, you can save them into a requirements.txt file so anyone can install the same dependencies.\n",
+    "\n",
+    "pip freeze > requirements.txt\n",
+    "\n",
+    "\n",
+    "To install from a requirements.txt:\n",
+    "\n",
+    "pip install -r requirements.txt\n",
+    "\n",
+    "6️⃣ Uninstalling a Package\n",
+    "pip uninstall requests\n",
+    "\n",
+    "7️⃣ Virtual Environments (Important for Projects)\n",
+    "\n",
+    "Prevents library version conflicts between projects.\n",
+    "\n",
+    "Create one:\n",
+    "\n",
+    "python -m venv venv\n",
+    "\n",
+    "\n",
+    "Activate:\n",
+    "\n",
+    "Windows (PowerShell):\n",
+    "\n",
+    "venv\\Scripts\\Activate\n",
+    "\n",
+    "\n",
+    "Mac/Linux:\n",
+    "\n",
+    "source venv/bin/activate\n",
+    "\n",
+    "\n",
+    "Install packages in it (isolated from global Python).\n",
+    "\n",
+    "Deactivate:\n",
+    "\n",
+    "deactivate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5ef5a75",
+   "metadata": {},
    "source": []
   }
  ],
